# psc

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.ipynb  README.md  comparaison_algos.ipynb  docker-compose.yml  lzjd.ipynb  manage.py  nilsimsa.ipynb  pyproject.toml  requirements.txt  sdhash.ipynb  ssdeep.ipynb  tlsh.ipynb
.github/workflows/: CI.yml
benchgen/: actions.py  image.py  noise.py  text.py
benchgen/text/: 01.txt  02.txt  03.txt  04.txt  11.txt  proposition.ref.txt  romeo.ref.txt  texte10.txt  texte5.txt  texte6.txt  texte7.txt  texte8.txt  texte9.txt  tlsh.ref.txt
dashboard/: admin.py  jobs.py  models.py
dashboard/migrations/: 0001_initial.py
data/: cache.sqlite
fuzzylib/: Cargo.toml
fuzzylib/bindings/: Cargo.toml  pyproject.toml
fuzzylib/bindings/src/: lib.rs
fuzzylib/src/: alder.rs  bloom.rs  fbhash.rs  features.rs  fnv.rs  levenshtein.rs  lib.rs  lzjd.rs  nilsimsa.rs  pearson.rs  sdhash.rs  shannon.rs  sise.rs  ssdeep.rs  tests.rs  tlsh.rs  tools.rs
lib/: analysis.py  cache.py  core.py
runners/: __init__.py  fast.py  fbhash_text.py  nilsimsa.py  sdhash  sdhash.py  ssdeep.py  tlsh.py
thash/: asgi.py  settings.py  urls.py  wsgi.py
theme/static_src/: package-lock.json
theme/templates/: base.html
