[project]
name = "fuzzy-hash"
version = "0.1.0"
description = "Plateforme de test fuzzy hashing"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "ipympl>=0.9.6",
    "ipython>=8.31.0",
    "jupyterthemes>=0.20.0",
    "maturin>=1.8.1",
    "pandas>=2.2.3",
    "progress>=1.6",
    "pygwalker>=0.4.9.13",
    "pyright>=1.1.392",
    "sqlalchemy>=2.0.37",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
